@@ -4,6 +4,7 @@
      The theme packages created since Dec 28 aren't compatible anymore.
      (nobody was able to load them yet anyway :D), sorry.
    - Added support for the audacious media player, thnx to Alexander Stillich <torque at pltn dot org> :)
+   - Added #kvirc channel links in the help menu. Please add your own localized #kvirc channel.
 
 06 Jan 2007
    [Alexey]
